Add app name in url

--- a/event/event_app/templates/event/create_event.html
+++ b/event/event_app/templates/event/create_event.html
@@ -8,7 +8,7 @@
     <div class="container">
         <h1>Create event</h1>
 
-        <form action="{% url 'create_event' %}" method="post" autocomplete="off">
+        <form action="{% url 'event:create_event' %}" method="post" autocomplete="off">
             {% csrf_token %}
             <br>    
             <div class="form-group row">
