--- a/event/event_app/templates/event/index.html
+++ b/event/event_app/templates/event/index.html
@@ -9,11 +9,11 @@
         <br>
         {% if user.is_authenticated %}
             <h6 class="text-center">{{ user }}</h6>
-            <button class="btn btn-light btn-sm"><a href="{% url 'create_event' %}" class="btn btn-light btn-sm">Create event</a></button>
+            <button class="btn btn-light btn-sm"><a href="{% url 'event:create_event' %}" class="btn btn-light btn-sm">Create event</a></button>
 
         {% endif %}
-        <a href="{% url 'signin' %}" class="btn btn-secondary">Sign in</a>
-        <a href="{% url 'signup' %}" class="btn btn-secondary">Sign up</a>
+        <a href="{% url 'event:signin' %}" class="btn btn-secondary">Sign in</a>
+        <a href="{% url 'event:signup' %}" class="btn btn-secondary">Sign up</a>
     
         <hr>
         {% if user.is_authenticated %}
@@ -23,8 +23,8 @@
                 <p>Location : {{ event.Location }}</p>
                 <p>Contact details : {{ event.Contact_details }}</p>
                 {% if user == event.Host_name %}
-                    <a href="{% url 'update_event' event.id %}" class="btn btn-primary btn-sm">Update</a>
-                    <a href="{% url 'delete_event' event.id %}" class="btn btn-danger btn-sm">Delete</a>
+                    <a href="{% url 'event:update_event' event.id %}" class="btn btn-primary btn-sm">Update</a>
+                    <a href="{% url 'event:delete_event' event.id %}" class="btn btn-danger btn-sm">Delete</a>
                 {% endif %}
                 <hr>
             {% endfor %}
