--- a/event/event_app/templates/event/update_event.html
+++ b/event/event_app/templates/event/update_event.html
@@ -9,7 +9,7 @@
     <h6 class="text-center m-5">Update Event details</h6>
 
 
-    <form action="{% url 'update_event' event.id %}" method="post" autocomplete="off">
+    <form action="{% url 'event:update_event' event.id %}" method="post" autocomplete="off">
         {% csrf_token %}
         <br>
         <div class="form-group row">
