--- a/event/event_app/templates/event/signup.html
+++ b/event/event_app/templates/event/signup.html
@@ -33,15 +33,15 @@ Sign up
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Password</label>
+                <label class="col-sm-2 col-form-label" for="psq1">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" name="pass1" required><br>
+                    <input type="password" id="psw1" name="pass1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-2 col-form-label">Confirm password</label>
+                <label class="col-sm-2 col-form-label" for="psw2">Confirm password</label>
                 <div class="col-sm-10">
-                    <input type="password" name='pass2' required><br>
+                    <input type="password" id="psw2" name="pass2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>                
                 </div>
             </div>
     
