--- a/event/event_app/templates/event/signin.html
+++ b/event/event_app/templates/event/signin.html
@@ -15,9 +15,9 @@ Sign in
     <form action="{% url 'event:signin' %}" method="POST" autocomplete="off">
         {% csrf_token %}
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label" >Username</label>
+            <label class="col-sm-2 col-form-label">Username</label>
             <div class="col-sm-10">
-                <input type="text" name="username" required><br>
+                <input type="text" name="username" pattern="[0-9a-zA-Z]+" title="Only letter and number" required><br>
             </div>
         </div>
         <div class="form-group row">
