--- a/event/event_app/templates/event/signup.html
+++ b/event/event_app/templates/event/signup.html
@@ -17,7 +17,7 @@ Sign up
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" name="username"  required><br>
+                    <input type="text" name="username" pattern="[0-9a-zA-Z]+" title="Only letter and numbers" required><br>
                 </div>
             </div>
             <div class="form-group row">
