--- a/event/event_app/templates/event/community.html
+++ b/event/event_app/templates/event/community.html
@@ -5,9 +5,38 @@
 {% endblock %}
 
 {% block body %}
-    <form action="{% url 'event:community' %}" method="POST" autocomplete="off">
-        {% csrf_token %%}
-        <input type="text" name="chat">
-        <button>Submit</button>
-    </form>
+    <div class="container" style="height:100vh; display:flex; flex-direction:column;">
+        {% for chat in allchat %}
+            {% if chat.name == username %}
+                <h3 class="d-flex justify-content-end">
+                    <div class="card mb-3" style="max-width: 100rem;">
+                        <div class="card-header">You</div>
+                        <div class="card-body text-secondary">
+                            <p class="card-text">{{ chat.chat }}
+                                <a href="{% url 'event:delete_chat' chat.id %}"><i class="fa-solid fa-trash" style="color: #ff1414;"></i></a>
+                                <a href="{% url 'event:update_chat' chat.id %}"><i class="fa-solid fa-marker" style="color: #63E6BE;"></i></a>    
+                            </p>
+                        </div>
+                    </div>
+                   </h3>
+            {% else %}
+                <div class="card border-secondary mb-3" style="max-width: 18rem;">
+                    <div class="card-header">{{ chat.name }}</div>
+                    <div class="card-body text-secondary">
+                    <p class="card-text">{{ chat.chat }}</p>
+                    </div>
+                </div>
+            {% endif %}
+        {% empty %}
+            <h1>No chat!!</h1>
+        {% endfor %}
+
+        <div class="d-flex align-items-end flex-column" style="height: 200px; flex:flex-end;">            
+            <form action="{% url 'event:community' %}" method="POST" autocomplete="off" class="mt-auto p-2">
+                {% csrf_token %%}
+                <input type="text" name="chat">
+                <button>Submit</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
