add link to main page and design

--- a/event/event_app/templates/event/signin.html
+++ b/event/event_app/templates/event/signin.html
@@ -5,8 +5,11 @@ Sign in
 {% endblock %}
 
 {% block body %}
-<div class="container">
-    <h6 class="text-center mt-5 mb-3">Sign in</h6>
+<div class="container pt-5">
+    <div class="d-flex">
+        <a href="{% url 'event:home' %}">Main page</a>
+        <h6 class="m-5 mt-1 mb-3">Sign in</h6>
+    </div>
 
     {% for message in messages %}
         <h6 class="text-warning bg-dark p-2">{{ message }}</h6>
