--- a/event/event_app/templates/event/report.html
+++ b/event/event_app/templates/event/report.html
@@ -1,7 +1,13 @@
 {% extends 'event/base.html' %}
+
 {% block title %}
     Report
 {% endblock %}
+
+{% block head %}
+    {% load static %}
+{% endblock  %}
+
 {% block body %}
     <div class="container pt-5">
         <div class="text-center">
@@ -10,9 +16,10 @@
         
             <form action="{% url 'event:report' event_data.id %}" method="post">
                 {% csrf_token %}
-                <textarea name="report_user"></textarea><br>
-                <button class="btn btn-danger">Report</button>
+                <textarea name="report_user" id="noempty"></textarea><br>
+                <input type="submit" class="btn btn-danger" id="submit">
             </form>
         </div>
+        <script src="{% static 'js/noemptyform.js' %}"></script>
     </div>
 {% endblock  %}
