--- a/event_app/templates/event/community.html
+++ b/event_app/templates/event/community.html
@@ -6,6 +6,7 @@
 
 {% block head %}
     {% load static %}
+    <link rel='stylesheet' href="{% static 'css/community.css' %}">
 {% endblock  %}
 
 {% block body %}
@@ -40,6 +41,7 @@
                         </div>
                     </div>
                 {% endif %}
+                <div id="bottom"></div>
             {% empty %}
                 <h1>Start the conversation</h1>
             {% endfor %}
@@ -47,11 +49,11 @@
             {% comment %} 
                     chat form
             {% endcomment %}
-            <div class="d-flex align-items-end flex-column" style="height: 200px; flex:flex-end;">            
+            <div class="d-flex align-items-end flex-column" style="height: 200px; flex:flex-end;">          
                 <form action="{% url 'event:community' %}" method="POST" autocomplete="off" class="mt-auto p-2">
                     {% csrf_token %%}
-                    <input type="text" name="chat" id="noempty">
-                    <input type="submit" class="btn btn-danger" id="submit">
+                    <input type="text" name="chat" id="noempty" class="chat-input">
+                    <input type="submit" class="btn btn-danger" id="submit" class="submit">
                 </form>
             </div>
         </div>
@@ -67,4 +69,5 @@
         </div>
     {% endif %}
     <script src="{% static 'js/noemptyform.js' %}"></script>
+    <script src="{% static 'js/community.js' %}"></script>
 {% endblock %}
